Fixed issues with horizontal scrollbars and linear gradient background

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  height: 100vh;
-  width: 100vw;
   background: linear-gradient(45deg, #081018, #213950);
 }
